@@ -6,6 +6,7 @@ export(ClassBoxPlot)
 export(ClassPDEplot)
 export(ClassViolinPlot)
 export(ClassPDEplotMaxLikeli)
+export(CrossTablePlot)
 export(DualAxisLineChart)
 export(fanPlot)
 export(GoogleMapsCoordinates)
