@@ -5,98 +5,61 @@
 CrossTablePlot
 }
 \description{
-%%  ~~ A concise (1-5 lines) description of what the function does. ~~
+Presents a heatmap with values and a cross table of given Data matrix of two features and a bin width or percentualized values.
 }
 \usage{
-CrossTablePlot(Data, xbins = seq(0, 100, 5), ybins = seq(0, 100, 5), PlotIt = T, NormalizationFactor = 1)
+CrossTablePlot(Data, xbins = seq(0, 100, 5), 
+
+ybins = xbins, PlotIt = TRUE, NormalizationFactor = 1,
+
+PlotText=TRUE,TextDigits=0)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
   \item{Data}{
-%%     ~~Describe \code{Data} here~~
+[1:n,1:2] matrix of two features from which the cross table should be generated from
 }
   \item{xbins}{
-%%     ~~Describe \code{xbins} here~~
+[1:k] start of k bins as a vector generated with \code{\link{seq}} of the first feature of data. Default setting assumes percentiled values between zero and 100.
 }
   \item{ybins}{
-%%     ~~Describe \code{ybins} here~~
+[1:k] start of k bins as a vector generated with \code{\link{seq}} of the second feature of data. Normally the same for both features, other settings are only possible if the length \code{k} is equal.
 }
   \item{PlotIt}{
-%%     ~~Describe \code{PlotIt} here~~
+Optional, Plots the heatmap if \code{TRUE}
 }
   \item{NormalizationFactor}{
-%%     ~~Describe \code{NormalizationFactor} here~~
+Optional, Data feautures can be seen as regular time series, e.g. 1 measurement for a minute, in this case it is useful to normalize the output, e.g. to hours, then \code{NormalizationFactor=60}
 }
+  \item{PlotText}{
+Default TRUE: plots text in heatmap with the values of the crosstable
+}
+  \item{TextDigits}{
+integer indicating the number of decimal places to use in \code{\link{round}} for \code{TextDigits=TRUE}.
 }
 \details{
-%%  ~~ If necessary, more details than the description above ~~
+The interval in each bin is closed to the left and opened to the right. The cross table can be seen as a two-dimensional histogram. The idea to add histograms to the table is taken from [Charpentier. 2014].
 }
 \value{
-%%  ~Describe the value returned
-%%  If it is a LIST, use
-%%  \item{comp1 }{Description of 'comp1'}
-%%  \item{comp2 }{Description of 'comp2'}
-%% ...
+\code{invisible} Output of the cross table which the depicts the number of values (frequency) in an specific range with regard to two variables. 
 }
 \references{
-%% ~put references to the literature/web site here ~
+[Charpentier. 2014]  Charpentier, Arthur, ed. Computational actuarial science with R. CRC Press, 2014.
 }
 \author{
-%%  ~~who you are~~
+Michael Thrun
 }
 \note{
-%%  ~~further notes~~
+For non percentiled values the \code{PlotText} part does not seem always to work, but I currently dont know why the text does not always overlap with the heatmap.
 }
 
-%% ~Make other sections like Warning with \section{Warning }{....} ~
 
 \seealso{
-%% ~~objects to See Also as \code{\link{help}}, ~~~
+\code{\link{table}},\code{\link{image}}
 }
 \examples{
-##---- Should be DIRECTLY executable !! ----
-##-- ==>  Define data, use random,
-##--	or do  help(data=index)  for the standard data sets.
-
-## The function is currently defined as
-function (Data, xbins = seq(0, 100, 5), ybins = seq(0, 100, 5), 
-    PlotIt = T, NormalizationFactor = 1) 
-{
-    width = abs(xbins[2] - xbins[1])
-    aint = findInterval(Data[, 1], ybins, left.open = FALSE, 
-        rightmost.closed = FALSE)
-    bint = findInterval(Data[, 2], ybins, left.open = FALSE, 
-        rightmost.closed = FALSE)
-    u = unique(aint)
-    leera = setdiff(1:length(xbins), u)
-    u = unique(bint)
-    leerb = setdiff(1:length(xbins), u)
-    CrossTable = table(c(aint, leera, rep(1, length(leerb))), 
-        c(bint, rep(1, length(leera)), leerb))
-    frequency <- as.data.frame(CrossTable)
-    frequency[, 1] = as.numeric(frequency[, 1])
-    frequency[, 2] = as.numeric(frequency[, 2])
-    for (i in 1:length(leera)) {
-        frequency[frequency[, 1] == leera[i], 3] = 0
-    }
-    for (i in 1:length(leerb)) {
-        frequency[frequency[, 2] == leerb[i], 3] = 0
-    }
-    frequency2D = diag(length(xbins)) * 0
-    frequency2D[cbind(frequency[, 1], frequency[, 2])] = frequency[, 
-        3]/NormalizationFactor
-    if (PlotIt) {
-        cols = DataVisualizations::HeatmapColors
-        image(xbins, ybins, frequency2D, xlab = colnames(Data)[1], 
-            ylab = colnames(Data)[2], col = cols)
-        text(frequency[, 1] * width - width, frequency[, 2] * 
-            width - width, labels = round(frequency[, 3]/NormalizationFactor, 
-            0))
-    }
-    return(invisible(CrossTable/NormalizationFactor))
-  }
+#ToDo
 }
-% Add one or more standard keywords, see file 'KEYWORDS' in the
-% R documentation directory.
-\keyword{ ~kwd1 }% use one of  RShowDoc("KEYWORDS")
-\keyword{ ~kwd2 }% __ONLY ONE__ keyword per line
+
+\keyword{cross table}% use one of  RShowDoc("KEYWORDS")
+\keyword{plot table}% __ONLY ONE__ keyword per line
